k8s/checkrpc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkrpc
  namespace: discov
  labels:
    app: checkrpc
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: checkrpc
  template:
    metadata:
      labels:
        app: checkrpc
    spec:
      containers:
      - name: checkrpc
        image: asia-east1-docker.pkg.dev/gcp-20190909-01/eddie/checkrpc:0.0.1
        lifecycle:
          preStop:
            exec:
              command: ["sh","-c","sleep 5"]
        ports:
        - containerPort: 8081
        readinessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            cpu: 20m
            memory: 128Mi
          limits:
            cpu: 1000m
            memory: 1024Mi
        volumeMounts:
        - name: timezone
          mountPath: /etc/localtime
      volumes:
        - name: timezone
          hostPath:
            path: /usr/share/zoneinfo/Asia/Taipei

---

apiVersion: v1
kind: Service
metadata:
  name: checkrpc-svc
  namespace: discov
spec:
  ports:
    - name: checkrpc-port
      port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app: checkrpc
  sessionAffinity: None
  type: NodePort
