k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gt-test-ingress
  # annotations:
  #   kubernetes.io/ingress.global-static-ip-name: "goplus-prod-ingress"
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: medusa-for-ingress-external
                port:
                  number: 80
